bug fixed for tag align

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -37,3 +37,8 @@
 	width: 60%;
 	margin: auto;
 }
+
+.user_arrow {
+	padding: 20px;
+	margin: auto;
+}
